<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="addMenuBar" type="com.roomedia.dakku.ui.editor.menu.AddMenuBar" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View style="@style/horizontalDivider" />

        <HorizontalScrollView
            android:id="@+id/addMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/textButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_text"
                    android:onClick="@{ (view) -> addMenuBar.onText(view) }"
                    app:srcCompat="@drawable/ic_text" />

                <View style="@style/verticalDivider" />

                <ImageButton
                    android:id="@+id/imageButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_image"
                    android:onClick="@{ (view) -> addMenuBar.onImage(view) }"
                    app:srcCompat="@drawable/ic_image" />

                <ImageButton
                    android:id="@+id/videoButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_video"
                    android:onClick="@{ (view) -> addMenuBar.onVideo(view) }"
                    app:srcCompat="@drawable/ic_video" />

                <View style="@style/verticalDivider" />

                <ImageButton
                    android:id="@+id/switchButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_switch"
                    android:onClick="@{ (view) -> addMenuBar.onSwitch(view) }"
                    app:srcCompat="@drawable/ic_switch" />

                <ImageButton
                    android:id="@+id/radioButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_radio"
                    android:onClick="@{ (view) -> addMenuBar.onRadio(view) }"
                    app:srcCompat="@drawable/ic_radio" />

                <ImageButton
                    android:id="@+id/checkButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_check"
                    android:onClick="@{ (view) -> addMenuBar.onCheck(view) }"
                    app:srcCompat="@drawable/ic_check" />

                <ImageButton
                    android:id="@+id/sliderButton"
                    style="@style/TransparentMenu"
                    android:contentDescription="@string/menu_slider"
                    android:onClick="@{ (view) -> addMenuBar.onSlider(view) }"
                    app:srcCompat="@drawable/ic_slider" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</layout>
