<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="0dp"
    android:paddingStart="16dp"
    android:paddingEnd="0dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/thumbnail_image_view"
            android:layout_width="128dp"
            android:layout_height="192dp"
            android:contentDescription="@string/diary_thumbnail"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/bookmarkImageButton"
        style="@style/TransparentImageButton"
        android:contentDescription="@string/bookmark_off"
        app:layout_constraintEnd_toStartOf="@+id/lockImageButton"
        app:layout_constraintTop_toTopOf="@+id/lockImageButton"
        app:srcCompat="@drawable/ic_bookmark" />

    <ImageButton
        android:id="@+id/lockImageButton"
        style="@style/TransparentImageButton"
        android:contentDescription="@string/lock_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lock" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="210315" />

</androidx.constraintlayout.widget.ConstraintLayout>